# listmonk-sync

./: Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml
.github/workflows/: build.yml
src/: main.rs
