[package]
name = "listmonk-sync"
version = "0.1.0"
categories = ["command-line-utilities"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
csv = "1.1.6"
itertools = "0.10.5"
log = "0.4.17"
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
simplelog = "0.12.0"
tokio = { version = "1.25.0", features = ["full"] }

[profile.release]
strip = true
lto = true
