[package]
name = "listmonk-sync"
version = "0.1.0"
categories = ["command-line-utilities"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
itertools = "0.11.0"
log = "0.4.17"
reqwest = { version = "0.11.19", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
simplelog = "0.12.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
