[package]
name = "listmonk-sync"
version = "0.1.0"
categories = ["command-line-utilities"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = "1"
csv = "1"
itertools = "0.12"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
